--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 }
 
 .bg-image {
-    background-image: url("../source/b.jpg");
+    background-image: url("source/b.jpg");
     height: 100px;
     height: 1000px;
     width: 2000px;
@@ -30,9 +30,9 @@
     font-weight: bold;
     border: 3px solid #f1f1f1;
     position: absolute;
-    top: 50%;
+    top: 0%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
     z-index: 2;
     width: 80%;
     padding: 20px;
@@ -40,7 +40,7 @@
   }
 
   .container {
-    padding: 16px;
+    padding: 70px;
 }
 
 .action {
@@ -53,7 +53,7 @@
 
   form {border: 3px solid #f1f1f1;}
 
- input[type=password], input[type=text] {
+   input[type=email], input[type=password], input[type=text] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -98,3 +98,22 @@
     width: 105%;
     opacity: 0.9;
 }
+
+.filter-options {
+    height: 100px;
+    background: #555;
+    color: white;
+    padding: 3px;
+    width: 100%;
+    border: 1px solid #666;
+    margin-bottom: 50px;
+    border-radius: 50px;
+    align-content: center;
+    border: 60px solid #111;
+ }
+ 
+ .photo-container {
+    max-width: auto;
+    margin: auto;
+    padding: 10px;
+ }
